Bug 167152 - PSD-Filews created by Photoshop will not be visible
Summary: PSD-Filews created by Photoshop will not be visible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.7.2 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-22 11:10 UTC by itsrealme21
Modified: 2025-06-25 09:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
PSD of a rasberry (246.69 KB, image/vnd.adobe.photoshop)
2025-06-22 11:12 UTC, itsrealme21
Details

Note You need to log in before you can comment on or make changes to this bug.
Description itsrealme21 2025-06-22 11:10:45 UTC
Coming from OpenOffice 4.1.15 and being a very long time user of Star Office and Open Office I tested LO to see if it can open up documents created by OO. Some of those documents contain linked graphics in PSD format created by Photoshop. LO opens those documents mainly correctly, having sometimes minor format issues.

The most disturbing problems is that LO is not showing those PSD files. It generates an empty frame only. In Writer it is possible to use the filter solarisation to get a kind of preview of what is in the frame. Attached an example PSD file.

Being new to LO I cannot only say that all my PSD files cannot be used in LO docs whereas it is a no frills thing in OO.
Comment 1 itsrealme21 2025-06-22 11:12:34 UTC
Created attachment 201408 [details]
PSD of a rasberry
Comment 2 Mike Kaganski 2025-06-22 11:47:30 UTC
Works fine in 6.0.
Fails with "unknown image format" in 7.0.
Comment 3 Saburo 2025-06-22 22:33:08 UTC
Bibisected with win64-24.2
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
author	Noel Grandin
commit 81994cb2b8b32453a92bcb011830fcb884f22ff3

Convert internal vcl bitmap formats transparency->alpha (II)
Comment 4 Commit Notification 2025-06-23 19:46:42 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/33560caa34a6532fb27641c19d7cc3bb4dc33057

tdf#167152 PSD-Filews created by Photoshop will not be visible

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 itsrealme21 2025-06-24 08:20:21 UTC
Wow, that was quick. Works at least with my psd collection.
Thank you!
Comment 6 Commit Notification 2025-06-25 08:14:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e940a9e28f701dcef8309fbb507b619357fccb25

tdf#167152 PSD-Filews created by Photoshop will not be visible

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-06-25 09:44:03 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/7dd9d4bca24ac1dd393397d2acd9931ea4a2f31c

tdf#167152 PSD-Filews created by Photoshop will not be visible

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.