tdf#167152 PSD-Filews created by Photoshop will not be visible

regression from
    commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Apr 16 20:33:10 2021 +0200
    Convert internal vcl bitmap formats transparency->alpha (II)

Change-Id: I995e5edef0e16a75b3ea702259753a480d825133
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186854
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 33560caa34a6532fb27641c19d7cc3bb4dc33057)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186929
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>